responsive css for contact us section and fixed horizontal scroll appearing for mobile view

--- a/app/assets/stylesheets/carousel.css
+++ b/app/assets/stylesheets/carousel.css
@@ -29,9 +29,6 @@ a {
   padding-right: 15px;
   padding-left: 15px;
 }
-.navbar-wrapper .navbar .container {
-  width: auto;
-}
 
 
 /* CUSTOMIZE THE CAROUSEL
